--- a/aboutus.css
+++ b/aboutus.css
@@ -1,119 +1,120 @@
 @font-face {
     font-family: milk_font;
     src: url(fonts/Milk\ Kids.ttf)
-}
-@font-face {
+  }
+  @font-face {
    font-family: nexa_font;
    src: url(fonts/NexaText-Trial-ExtraLight.ttf);
-}
-* {
+  }
+  * {
     color: white;
     font-size: 1.2em;
-}
-body {
-    background-color: rgb(24, 24, 24);  
-}
-html {
-    margin: 0;
-    padding: 0;
-}
-li, a {
+    font-family: "milk_font";
+    background-color: rgb(24, 24, 24);
+  }
+  li, a {
     font-weight: 1000;
     text-decoration: none; 
     list-style: none;
-    font-family: "milk_font";
-}
-header {
+  }
+  header {
     display: flex;
     justify-content: space-between; 
     padding: 30px;
     font-family: "milk_font";
-}
-button {
+  }
+  button {
     background-color: green;
     padding: 10px;
     border-radius: 25px;
     cursor: pointer
-    font-family: "milk_font";
-}
-a button {
-    font-family: "milk_font";
-    cursor: pointer;
-}
-button:hover {
+  }
+  button:hover {
     background-color: lightgreen;
-}
-a:hover {
+  }
+  a:hover {
     color: gray;
-}
-.aboutthedevs_nav li {
+  }
+  .aboutthedevs_nav li {
     display: inline-block; 
     padding: 10px;
-    font-family: "milk_font";
-}
-.gameinfo {
+  }
+  .gameinfo {
     margin: 0px 690px;
     font-size: 32px;
-    font-family: "milk_font";
-}
-.gamename a {
+  }
+  .gamename a {
     color: green;
     font-size: 1.6em;
     text-align: center;
-    font-family: "milk_font";
-}
-.gamename a:hover { 
+  }
+  .gamename a:hover { 
     color: lightgreen;
-}
-.about_us {
+  }
+  .about_us {
     display: flex; 
     justify-content: center;
-}
-.about_us a {
+    margin-bottom: 30px;
+  }
+  .about_us a {
     margin: 0px 40px;
-    font-family: "milk_font";   
-}
-#titel_homepagina {
-    color: white;
-    font-family: "milk_font";
-    font-size: 75px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#code_game img {
-    margin-left: auto;
-    margin-right: auto;
+  }
+  h1 {
     display: block;
-    width: 50%;
-    height: 40%;
-    border-radius: 50px;
-}
-#welcome_text {
-    width: 600px;
-    display: flex;
-    margin: auto;
-}
-#welcome_text p {
-    color: white;
-    font-family: "nexa_font";
-    font-size: x-large;
     text-align: center;
-}
-#welcome_text strong {
-    font-family: "nexa_font"
-}
-footer {
+    letter-spacing: 1px;
+    color: green;
+    font-family: "milk_font";
+    font-weight: bold;
+    font-size: 70px;
+  }
+  p {
+    display: block;
+    font-size: 22px;
+    font-family: sans-serif;
+    line-height: 30px;
+    letter-spacing: 1px;
+    color: black;
+  }
+  h2 {
+    display: block;
+    text-align: center;
+    font-size: 45px;
+    font-family: "nexa_font";
+  }
+  h3 {
+    display: block;
+    text-align: center;
+    font-family: "nexa_font";
+  }
+  p{
+    display: block;
+    text-align: center;
+    font-family: "nexa_font";
+    color: white;
+    width: 1000px;
+    margin: auto;
+  }
+  .aboutus {
+    display: flex; 
+    justify-content: center;
+  }
+  .aboutus a {
+    margin: 0px 40px;
+  }
+  footer {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #272727;
     border-top: 2px solid #FFFFFF;
     padding: 40px 40px 30px;
-}
-footer p{
+    margin-top: 30px;
+  }
+  footer p{
     color: white;
     font-size: 25px;
     padding: 20px 0px;
     font-family: "nexa_font";
-}
+    background-color: #272727;
+  }
